Roadmap updated, fix visual glitch with background on mobile iOS

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -19,7 +19,8 @@ body {
     );
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100vh;
+    background-size: auto;
+
 }
 
 code {
